# toxcore

./: .cirrus.yml  .clang-format  .clang-tidy  .dockerignore  .doxygen.conf  .editorconfig  .gitignore  .gitmodules  .hadolint.yaml  .restyled.yaml  .travis.yml  AUTHORS  BUILD  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  COPYING  DONATORS  INSTALL  INSTALL.md  LEGAL.md  Makefile.am  PATCH.md  README.md  Tox_GUI.sln  _vimrc_local.vim  appveyor.yml  autogen.sh  azure-pipelines.yml  circle.yml  codecov.yml  conanfile.py  configure.ac  data  heroku.yml  libtoxav.pc  libtoxav.pc.in  libtoxcore.pc.in  libtoxencryptsave.pc.in  (+8 more)
Tuxrtp/: Allocator.h  CMakeLists.txt  Makefile  handler.c  handler.h  media_session_initiation.c  media_session_initiation.h  rtp_allocator.h  rtp_error.c  rtp_error.h  rtp_error_id.h  rtp_handler.c  rtp_handler.h  rtp_helper.c  rtp_helper.h  rtp_impl.c  rtp_impl.h  rtp_message.c  rtp_message.h
Tuxrtp/tests/: AV_codec.c  AV_codec.h  Makefile  test_bidirect.c  test_dtest.c  test_headers.c  test_helper.c  test_helper.h  test_regular.c  test_video.c
auto_tests/: BUILD  BUILD.bazel  CMakeLists.txt  Makefile.inc  TCP_test.c  announce_test.c  assoc_test.c  auto_test_support.c  auto_test_support.h  bootstrap_test.c  check_compat.h  conference_av_test.c  conference_double_invite_test.c  conference_invite_merge_test.c  conference_peer_nick_test.c  conference_simple_test.c  conference_test.c  conference_two_test.c  crypto_test.c  dht_getnodes_api_test.c  dht_test.c  encryptsave_test.c  file_saving_test.c  file_streaming_test.c  file_transfer_test.c  forwarding_test.c  friend_connection_test.c  friend_request_spam_test.c  friend_request_test.c  friends_test.c  group_announce_test.c  group_general_test.c  group_invite_test.c  group_message_test.c  group_moderation_test.c  group_save_test.c  group_state_test.c  group_sync_test.c  group_tcp_test.c  group_topic_test.c  (+47 more)
auto_tests/cmake/: crypto_test.cmake  friends_test.cmake  messenger_test.cmake
auto_tests/data/: save.tox  save.tox.big  save.tox.little
core/: CMakeLists.txt  Connection.c  Connection.h  DHT.c  DHT.h  Friends.c  Friends.h  LAN_discovery.c  LAN_discovery.h  Lossless_UDP.c  Lossless_UDP.h  Messenger.c  Messenger.c.orig  Messenger.h  State.c  State.h  connection.c  connection.h  friend_requests.c  friend_requests.h  friends.c  friends.h  friends_internal.h  helper.c  helper.h  lossless_UDP.c  lossless_UDP.h  media_session_initiation.c  media_session_initiation.h  media_session_message.c  media_session_message.h  messenger.c  messenger.c.hack  messenger.h  messenger_internal.h  misc_tools.c  misc_tools.h  net_crypto.c  net_crypto.h  network.c  (+12 more)
core/XML_Parser/: README  README.md  asm-xml.h  friends.xml
docs/: Avatars.md  CMakeLists.txt  Crypto.txt  DHT.txt  DHT_hardening.txt  Doxyfile  FAQ.txt  Group-Chats.md  Group_chats.txt  Hardening.txt  Hardening_docs.txt  IDEAS.txt  Lossless_UDP.txt  Messenger_Protocol.txt  Prevent_Tracking.txt  Profile_Format.md  Routing.txt  TCP_Network.txt  TODO  TODO and Roadmap  TODO and Roadmap.md  TODO.md  TODO.txt  Tox_middle_level_network_protocol.txt  WHY.txt  apidsl.md  av_api.md  commands.md  commands.rst  conf.py  conf.py.in  index.rst  install.rst  minpgc.md  start_guide.de.md  start_guide.de.rst  start_guide.md  start_guide.rst  using_tox.md  using_tox.rst
docs/updates/: Crypto.md  DHT.md  Spam-Prevention.md  Symmetric-NAT-Transversal.md
other/: BUILD  BUILD.bazel  CMakeLists.txt  DHT_bootstrap  DHT_bootstrap.c  DHTnodes  DHTservers  Makefile.inc  bootstrap_node_packets.c  bootstrap_node_packets.h  bootstrap_server_packets.c  cpufeatures.c  make_single_file  monolith.h  print-version  toktok-rebase  version-sync  windows_build_script_toxcore.sh
other/analysis/: check_includes  check_logger_levels  check_recursion  gen-file.sh  run-check-recursion  run-clang  run-clang-analyze  run-clang-tidy  run-cppcheck  run-cpplint  run-gcc  run-infer  run-sparse  variants.sh
other/apidsl/: README.md  tox.in.h  toxav.in.h
other/astyle/: README  README.md  astylerc  format-source  pre-commit
other/bootstrap_daemon/: BUILD  BUILD.bazel  CMakeLists.txt  Makefile.inc  README.md  conf  tox-bootstrapd  tox-bootstrapd-tmpfile.conf  tox-bootstrapd.c  tox-bootstrapd.conf  (+4 more)
testing/: BUILD  BUILD.bazel  CMakeLists.txt  DHT_cryptosendfiletest.c  DHT_sendfiletest.c  DHT_test  DHT_test.c  Dockerfile  Lossless_UDP_testclient  Lossless_UDP_testclient.c  Lossless_UDP_testserver  Lossless_UDP_testserver.c  Makefile.inc  Messenger_test  Messenger_test.c  Opus_test.c  afl_toxsave.c  av_test.c  coverage_live.sh  crypto_speed_test.c  distill_corpus.sh  dns3_test.c  fucking_test.c  group_announce_test.c  group_chats_test.c  irc_syncbot.c  messenger_test.c  messenger_test.c.hack  misc_tools.c  misc_tools.h  muh parser.php  nTox  nTox.c  nTox.h  nToxAudio.c  nToxAudio.h  nTox_win32.c  nTox_win32.h  random_testing.cc  rect.py  (+6 more)
toxav/: BUILD  BUILD.bazel  Makefile.inc  audio.c  audio.h  av_test.c  bwcontroler.c  bwcontroler.h  bwcontroller.c  bwcontroller.h  codec.c  codec.h  event.c  event.h  group.c  group.h  groupav.c  groupav.h  media.c  media.h  msi.c  msi.h  pair.h  phone.c  ring_buffer.c  ring_buffer.h  ring_buffer_test.cc  rtp.c  rtp.h  rtp_test.cc  rtp_test.cpp  toxav.api.h  toxav.c  toxav.h  toxav_new.c  toxav_new.h  toxav_new_1.c  toxav_old.c  toxav_old.h  toxmedia.c  (+7 more)
toxcore/: BUILD  BUILD.bazel  CMakeLists.txt  DHT.c  DHT.h  DHT_fuzz_test.cc  DHT_test.cc  DHT_test_util.cc  DHT_test_util.hh  LAN_discovery.api.h  LAN_discovery.c  LAN_discovery.h  Lossless_UDP.c  Lossless_UDP.h  Makefile.inc  Messenger.c  Messenger.h  TCP_client.c  TCP_client.h  TCP_common.c  TCP_common.h  TCP_connection.c  TCP_connection.h  TCP_connection_test.cc  TCP_server.c  TCP_server.h  announce.c  announce.h  assoc.c  assoc.h  attributes.h  bin_pack.c  bin_pack.h  bin_pack_test.cc  bin_unpack.c  bin_unpack.h  ccompat.c  ccompat.h  crypto_core.api.h  crypto_core.c  (+126 more)
toxencryptsave/: BUILD  BUILD.bazel  Makefile.inc  defines.h  toxencryptsave.api.h  toxencryptsave.c  toxencryptsave.h
(+624 files in other folders)
