load("@rules_cc//cc:defs.bzl", "cc_library")
load("//tools/project:build_defs.bzl", "project")

project()

genrule(
    name = "public_headers",
    srcs = [
        "//c-toxcore/toxav:toxav.h",
        "//c-toxcore/toxcore:tox.h",
        "//c-toxcore/toxencryptsave:toxencryptsave.h",
    ],
    outs = [
        "tox/toxav.h",
        "tox/tox.h",
        "tox/toxencryptsave.h",
    ],
    cmd = """
        cp $(location //c-toxcore/toxav:toxav.h) $(GENDIR)/c-toxcore/tox/toxav.h
        cp $(location //c-toxcore/toxcore:tox.h) $(GENDIR)/c-toxcore/tox/tox.h
        cp $(location //c-toxcore/toxencryptsave:toxencryptsave.h) $(GENDIR)/c-toxcore/tox/toxencryptsave.h
    """,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "c-toxcore",
    hdrs = [":public_headers"],
    includes = ["."],
    visibility = ["//visibility:public"],
    deps = [
        "//c-toxcore/toxav",
        "//c-toxcore/toxcore",
        "//c-toxcore/toxencryptsave",
    ],
)
